Remove canvas, fix pointer

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <link rel="stylesheet" href="styles/main.scss" />
   </head>
   <body>
-    <div class="canvas-wrapper" id="canvas-wrapper">
-      <canvas id="canvas"></canvas>
-    </div>
+    <div class="cursor cursor-regular"></div>
+    <canvas id="canvas" resize></canvas>
+
     <div about="#me" typeof="foaf:Person" id="main">
       <div id="intro-wrapper">
         <h1>Johannes Wehner</h1>
@@ -71,10 +71,10 @@
               Men jeg har også rodet med meget andet.
             </p>
             <p>
-              Det tekniske er vigtigt, men jeg går ligeså meget op i koncepter og formidling. Derfor er
-              de fleste af mine projekter er i mediebranchen. Jeg har bl.a.
-              arbejdet for DR, Dagbladet Information, Berlingske, Tv2, Børsen og
-              Videnskab.dk
+              Det tekniske er vigtigt, men jeg går ligeså meget op i koncepter
+              og formidling. Derfor er de fleste af mine projekter er i
+              mediebranchen. Jeg har bl.a. arbejdet for DR, Dagbladet
+              Information, Berlingske, Tv2, Børsen og Videnskab.dk
             </p>
           </div>
         </div>
