First draft of the new version

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </head>
   <body>
     <div class="cursor cursor-regular"></div>
-    <canvas id="canvas" resize></canvas>
+    <div id="particles-js"></div>
 
     <div about="#me" typeof="foaf:Person" id="main">
       <div id="intro-wrapper">
