New color scheme

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <h5><a href="http://dr.dk">DR</a></h5>
               </div>
               <div class="card-copy">
-                Redaktionel Udvikler på DR.dk. Konceptudvikling og
+                Redaktionel udvikler på DR Nyheder. Konceptudvikling og
                 implementering af interaktive redaktionelle elementer.
               </div>
             </div>
