--- a/index.html
+++ b/index.html
@@ -1,238 +1,207 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Johannes Wehner // Udvikler</title>
-    <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width" />
-    <link rel="shortcut icon" href="/favicon.ico" />
-    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
-    <meta name="description" content="Johannes Wehner, Senior Developer" />
-    <meta
-      name="keywords"
-      content="Angular.js, Angular2, Vue, JavaScript, jQuery, Open Source, frontend, Web development,Drupal, PHP, MySQL, node.js"
-    />
-    <meta property="og:title" content="Johannes Wehner // Senior Developer" />
-    <meta <meta property="og:description" content="Digital indholdsudvikler" />
-    <meta property="og:url" content="https://johanneswehner.com" />
-    <link
-      href="//fonts.googleapis.com/css?family=Oswald|Raleway"
-      rel="stylesheet"
-      type="text/css"
-    />
 
-    <link rel="stylesheet" href="styles/main.scss" />
-  </head>
-  <body>
-    <div class="cursor cursor-regular"></div>
-    <div id="particles-js"></div>
+<head>
+  <meta charset="utf-8" />
+  <title>Johannes Wehner // Udvikler</title>
+  <meta name="description" content="" />
+  <meta name="viewport" content="width=device-width" />
+  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+  <meta name="description" content="Johannes Wehner, Senior Developer" />
+  <meta name="keywords"
+    content="Angular.js, Angular2, Vue, JavaScript, jQuery, Open Source, frontend, Web development,Drupal, PHP, MySQL, node.js" />
+  <meta property="og:title" content="Johannes Wehner // Senior Developer" />
+  <meta <meta property="og:description" content="Digital indholdsudvikler" />
+  <meta property="og:url" content="https://johanneswehner.com" />
+  <link href="//fonts.googleapis.com/css?family=Oswald|Raleway" rel="stylesheet" type="text/css" />
 
-    <div about="#me" typeof="foaf:Person" id="main">
-      <div id="intro-wrapper">
-        <h1>Johannes Wehner</h1>
-        <h2>Udvikler interaktiv formidling</h2>
-        <div class="links">
-          <a
-            class="link-mail icon-mail"
-            rel="foaf:mbox"
-            href="mailto:mail@johanneswehner.com"
-            >mail@johanneswehner.com</a
-          >
-          <a class="link-phone icon-phone" href="tel:+4526775030"
-            >+45 26 77 50 30</a
-          >
-          <a
-            class="link-linkedin icon-linkedin"
-            href="http://dk.linkedin.com/in/johanneswehner"
-            >LinkedIn</a
-          >
-          <a class="link-twitter icon-twitter" href="http://twitter.com/johsw"
-            >Twitter</a
-          >
-          <a
-            class="link-cvr icon-book"
-            href="http://datacvr.virk.dk/data/visenhed?enhedstype=virksomhed&id=36446641"
-            >CVR: 36446641</a
-          >
+  <link rel="stylesheet" href="styles/main.scss" />
+</head>
+
+<body>
+  <div class="cursor cursor-regular"></div>
+  <div id="particles-js"></div>
+
+  <div about="#me" typeof="foaf:Person" id="main">
+    <div id="intro-wrapper">
+      <h1>Johannes Wehner</h1>
+      <h2>Udvikler interaktiv formidling</h2>
+      <div class="links">
+        <a class="link-mail icon-mail" rel="foaf:mbox" href="mailto:mail@johanneswehner.com">mail@johanneswehner.com</a>
+        <a class="link-phone icon-phone" href="tel:+4526775030">+45 26 77 50 30</a>
+        <a class="link-linkedin icon-linkedin" href="http://dk.linkedin.com/in/johanneswehner">LinkedIn</a>
+        <a class="link-twitter icon-twitter" href="http://twitter.com/johsw">Twitter</a>
+        <a class="link-cvr icon-book" href="http://datacvr.virk.dk/data/visenhed?enhedstype=virksomhed&id=36446641">CVR:
+          36446641</a>
+      </div>
+    </div>
+    <div id="contents-wrapper">
+      <div class="contents-box-wrapper">
+        <div class="contents-box" id="welcome">
+          <p>
+            Velkommen. Jeg hedder Johannes Wehner og jeg er digital udvikler
+            med mere end 15 års erfaring. På denne side kan du se lidt om mine
+            projekter, og hvordan jeg arbejder.
+          </p>
+          <p>
+            Jeg laver både frontend og backend, og jeg har mest erfaring med
+            Javascript, Vue.js, Angular.js, CSS, Node.js, Wordpress og Drupal.
+            Men jeg har også rodet med meget andet.
+          </p>
+          <p>
+            Det tekniske er vigtigt, men jeg går ligeså meget op i koncepter
+            og formidling. Derfor er de fleste af mine projekter i
+            mediebranchen. Jeg har bl.a. arbejdet for DR, Dagbladet
+            Information, Berlingske, Tv2, Børsen og Videnskab.dk
+          </p>
         </div>
       </div>
-      <div id="contents-wrapper">
-        <div class="contents-box-wrapper">
-          <div class="contents-box" id="welcome">
-            <p>
-              Velkommen. Jeg hedder Johannes Wehner og jeg er digital udvikler
-              med mere end 15 års erfaring. På denne side kan du se lidt om mine
-              projekter, og hvordan jeg arbejder.
-            </p>
-            <p>
-              Jeg laver både frontend og backend, og jeg har mest erfaring med
-              Javascript, Vue.js, Angular.js, CSS, Node.js, Wordpress og Drupal.
-              Men jeg har også rodet med meget andet.
-            </p>
-            <p>
-              Det tekniske er vigtigt, men jeg går ligeså meget op i koncepter
-              og formidling. Derfor er de fleste af mine projekter er i
-              mediebranchen. Jeg har bl.a. arbejdet for DR, Dagbladet
-              Information, Berlingske, Tv2, Børsen og Videnskab.dk
-            </p>
+      <div class="contents-box" id="cases">
+        <h4 class="cases">Cases</h4>
+        <div class="card-wrapper">
+          <div class="card">
+            <div class="card-header">
+              <h5><a href="http://dr.dk">DR</a></h5>
+            </div>
+            <div class="card-copy">
+              Redaktionel udvikler på DR Nyheder. Konceptudvikling og
+              implementering af interaktive redaktionelle elementer.
+            </div>
           </div>
-        </div>
-        <div class="contents-box" id="cases">
-          <h4 class="cases">Cases</h4>
-          <div class="card-wrapper">
-            <div class="card">
-              <div class="card-header">
-                <h5><a href="http://dr.dk">DR</a></h5>
-              </div>
-              <div class="card-copy">
-                Redaktionel udvikler på DR Nyheder. Konceptudvikling og
-                implementering af interaktive redaktionelle elementer.
-              </div>
-            </div>
 
-            <div class="card">
-              <div class="card-header">
-                <h5><a href="http://nordea.dk">Nordea</a></h5>
-              </div>
-              <div class="card-copy">
-                Ekstern konsulent. Angular.js i et internationalt scrum-team.
-                Udvikling af internt værktøj.
-              </div>
+          <div class="card">
+            <div class="card-header">
+              <h5><a href="http://nordea.dk">Nordea</a></h5>
             </div>
+            <div class="card-copy">
+              Ekstern konsulent. Angular.js i et internationalt scrum-team.
+              Udvikling af internt værktøj.
+            </div>
+          </div>
 
-            <div class="card">
-              <div class="card-header">
-                <h5><a href="https://foljeton.dk">Føljeton</a></h5>
-              </div>
-              <div class="card-copy">
-                Tech-lead. Frontend: Angular.js, ui-router, produkt-udvikling.
-                Backend: Node.js, Mongo, Redis, Integration til Intercom, Stripe
-                mm.
-              </div>
+          <div class="card">
+            <div class="card-header">
+              <h5><a href="https://foljeton.dk">Føljeton</a></h5>
             </div>
+            <div class="card-copy">
+              Tech-lead. Frontend: Angular.js, ui-router, produkt-udvikling.
+              Backend: Node.js, Mongo, Redis, Integration til Intercom, Stripe
+              mm.
+            </div>
+          </div>
 
-            <div class="card">
-              <div class="card-header">
-                <h5><a href="http://m.stiften.dk">Stiften - mobilsite</a></h5>
-              </div>
-              <div class="card-copy">
-                Frontend: Angular.js og konceptudvikling. Backend:
-                Node.js-proxy-server og integration til search, vejrtjeneste og
-                CMS
-              </div>
+          <div class="card">
+            <div class="card-header">
+              <h5><a href="http://m.stiften.dk">Stiften - mobilsite</a></h5>
             </div>
+            <div class="card-copy">
+              Frontend: Angular.js og konceptudvikling. Backend:
+              Node.js-proxy-server og integration til search, vejrtjeneste og
+              CMS
+            </div>
+          </div>
 
-            <div class="card">
-              <div class="card-header">
-                <h5>
-                  <a href="http://www.information.dk"
-                    >Information.dk - Platform</a
-                  >
-                </h5>
-              </div>
-              <div class="card-copy">
-                Information.dk på Drupal5, Drupal6 og Drupal7. Både frontend og
-                backend. Diverse integrationer til eksterne systemer.
-              </div>
+          <div class="card">
+            <div class="card-header">
+              <h5>
+                <a href="http://www.information.dk">Information.dk - Platform</a>
+              </h5>
             </div>
-            <div class="card">
-              <div class="card-header">
-                <h5>
-                  <a href="http://www.berlingskemedia.dk">Berlingske Media</a>
-                </h5>
-              </div>
-              <div class="card-copy">
-                Redaktionel prototyping, frontend og Node.js for bl.a
-                Business.dk
-              </div>
+            <div class="card-copy">
+              Information.dk på Drupal5, Drupal6 og Drupal7. Både frontend og
+              backend. Diverse integrationer til eksterne systemer.
             </div>
-            <div class="card">
-              <div class="card-header">
-                <h5><a href="http://beep.tv2.dk">Tv2</a></h5>
-              </div>
-              <div class="card-copy">
-                Pilot-projekt på beep.tv2.dk inden Tv2's valg af Drupal - inkl.
-                uddannelse af deres hold.
-              </div>
+          </div>
+          <div class="card">
+            <div class="card-header">
+              <h5>
+                <a href="http://www.berlingskemedia.dk">Berlingske Media</a>
+              </h5>
             </div>
-            <div class="card">
-              <div class="card-header">
-                <h5>
-                  <a href="http://www.information.dk/datablog"
-                    >Information.dk - Datablog</a
-                  >
-                </h5>
-              </div>
-              <div class="card-copy">
-                Datajournalistiske projekter i forbindelse med Warlogs, "Vi
-                overvåger overvågerne" og flere. Medarrangør af
-                datajournalistisk pris og hackathon.
-              </div>
+            <div class="card-copy">
+              Redaktionel prototyping, frontend og Node.js for bl.a
+              Business.dk
             </div>
-            <div class="card">
-              <div class="card-header">
-                <h5><a href="http://beep.tv2.dk">Videnskab.dk</a></h5>
-              </div>
-              <div class="card-copy">
-                Migreret og bygget videnskab.dk på Drupal6
-              </div>
+          </div>
+          <div class="card">
+            <div class="card-header">
+              <h5><a href="http://beep.tv2.dk">Tv2</a></h5>
             </div>
-            <div class="card">
-              <div class="card-header">
-                <h5><a href="http://kk.dk">Købehavns Kommune</a></h5>
-              </div>
-              <div class="card-copy">
-                Faglig konsulent på krav til Drupal-leverandør til kk.dk
-              </div>
+            <div class="card-copy">
+              Pilot-projekt på beep.tv2.dk inden Tv2's valg af Drupal - inkl.
+              uddannelse af deres hold.
             </div>
-            <div class="card">
-              <div class="card-header">
-                <h5>
-                  <a href="http://www.information.dk"
-                    >Information.dk - Selvbetjening</a
-                  >
-                </h5>
-              </div>
-              <div class="card-copy">
-                Opbygning af salg og selvbetjenings-site for abonnenter.
-                Integration til abonnementssystem.
-              </div>
+          </div>
+          <div class="card">
+            <div class="card-header">
+              <h5>
+                <a href="http://www.information.dk/datablog">Information.dk - Datablog</a>
+              </h5>
             </div>
-            <div class="card">
-              <div class="card-header">
-                <h5><a href="http://borsen.dk">Børsen</a></h5>
-              </div>
-              <div class="card-copy">
-                Konsulent på kategorisering, autotagging og tagging af indhold
-              </div>
+            <div class="card-copy">
+              Datajournalistiske projekter i forbindelse med Warlogs, "Vi
+              overvåger overvågerne" og flere. Medarrangør af
+              datajournalistisk pris og hackathon.
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header">
+              <h5><a href="http://beep.tv2.dk">Videnskab.dk</a></h5>
+            </div>
+            <div class="card-copy">
+              Migreret og bygget videnskab.dk på Drupal6
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header">
+              <h5><a href="http://kk.dk">Købehavns Kommune</a></h5>
+            </div>
+            <div class="card-copy">
+              Faglig konsulent på krav til Drupal-leverandør til kk.dk
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header">
+              <h5>
+                <a href="http://www.information.dk">Information.dk - Selvbetjening</a>
+              </h5>
+            </div>
+            <div class="card-copy">
+              Opbygning af salg og selvbetjenings-site for abonnenter.
+              Integration til abonnementssystem.
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header">
+              <h5><a href="http://borsen.dk">Børsen</a></h5>
+            </div>
+            <div class="card-copy">
+              Konsulent på kategorisering, autotagging og tagging af indhold
             </div>
           </div>
         </div>
-        <div class="contents-box-wrapper">
-          <div class="contents-box">
-            <p>
-              Jeg er bedst på projekter, hvor jeg kan tænke med - altså være med
-              til at produktudvikle og prototype. Gerne i samarbejde med en
-              UX'er og en grafiker. Det giver det bedste resultat.
-            </p>
-            <p>Kontakt mig, hvis du synes, det lyder spændende!</p>
-          </div>
-          <div class="contents-box">
-            <a class="button button-phone" href="tel:+4526775030"
-              >Tlf: 26 77 50 30</a
-            >
-            <a
-              class="button button-mail"
-              rel="foaf:mbox"
-              href="mailto:mail@johanneswehner.com"
-              >mail@johanneswehner.com</a
-            >
-          </div>
+      </div>
+      <div class="contents-box-wrapper">
+        <div class="contents-box">
+          <p>
+            Jeg er bedst på projekter, hvor jeg kan tænke med - altså være med
+            til at produktudvikle og prototype. Gerne i samarbejde med en
+            UX'er og en grafiker. Det giver det bedste resultat.
+          </p>
+          <p>Kontakt mig, hvis du synes, det lyder spændende!</p>
+        </div>
+        <div class="contents-box">
+          <a class="button button-phone" href="tel:+4526775030">Tlf: 26 77 50 30</a>
+          <a class="button button-mail" rel="foaf:mbox"
+            href="mailto:mail@johanneswehner.com">mail@johanneswehner.com</a>
         </div>
       </div>
     </div>
+  </div>
 
-    <script src="scripts/main.js"></script>
-  </body>
+  <script src="scripts/main.js"></script>
+</body>
+
 </html>
