Content, design, build

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <link rel="shortcut icon" href="/favicon.ico" />
   <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
-  <meta name="description" content="Johannes Wehner, Senior Developer" />
+  <meta name="description" content="Johannes Wehner, Senior Redaktionel Udvikler" />
   <meta name="keywords"
-    content="Angular.js, Angular2, Vue, JavaScript, jQuery, Open Source, frontend, Web development,Drupal, PHP, MySQL, node.js" />
-  <meta property="og:title" content="Johannes Wehner // Senior Developer" />
-  <meta <meta property="og:description" content="Digital indholdsudvikler" />
+    content="Digital udvikler, Digital journalistik, Databasejournalistisk " />
+  <meta property="og:title" content="Johannes Wehner // Senior Redaktionel Udvikler" />
+  <meta property="og:description" content="Digital indholdsudvikler" />
   <meta property="og:url" content="https://johanneswehner.com" />
   <link href="//fonts.googleapis.com/css?family=Oswald|Raleway" rel="stylesheet" type="text/css" />
 
@@ -22,12 +22,12 @@
 
 <body>
   <div class="cursor cursor-regular"></div>
-  <div id="particles-js"></div>
+
 
   <div about="#me" typeof="foaf:Person" id="main">
     <div id="intro-wrapper">
       <h1>Johannes Wehner</h1>
-      <h2>Udvikler interaktiv formidling</h2>
+      <h2>Redaktionel Seniorudvikler</h2>
       <div class="links">
         <a class="link-mail icon-mail" rel="foaf:mbox" href="mailto:mail@johanneswehner.com">mail@johanneswehner.com</a>
         <a class="link-phone icon-phone" href="tel:+4526775030">+45 26 77 50 30</a>
@@ -39,17 +39,15 @@
         <div class="contents-box" id="welcome">
           <p>
             Velkommen. Jeg hedder Johannes Wehner og jeg er digital udvikler
-            med mere end 15 års erfaring. På denne side kan du se lidt om mine
+            med mere end 20 års erfaring. På denne side kan du se lidt om mine
             projekter, og hvordan jeg arbejder.
           </p>
           <p>
-            Jeg laver både frontend og backend, og jeg har mest erfaring med
-            Javascript, Vue.js, Angular.js, CSS, Node.js, Wordpress og Drupal.
-            Men jeg har også rodet med meget andet.
+            Jeg laver både frontend og backend - som oftest i node.js og javascript.
           </p>
           <p>
             Det tekniske er vigtigt, men jeg går ligeså meget op i koncepter
-            og formidling. Derfor er de fleste af mine projekter i
+            og formidling. Derfor har de fleste af mine projekter været som redaktionel udvikler i
             mediebranchen. Jeg har bl.a. arbejdet for DR, Dagbladet
             Information, Berlingske, Tv2, Børsen og Videnskab.dk
           </p>
@@ -63,7 +61,7 @@
               <h5><a href="http://dr.dk">DR</a></h5>
             </div>
             <div class="card-copy">
-              Redaktionel udvikler på DR Nyheder. Konceptudvikling og
+              Redaktionel leadudvikler på DR Nyheder. Digital research og formidling. Konceptudvikling og
               implementering af interaktive redaktionelle elementer.
             </div>
           </div>
@@ -198,7 +196,7 @@
     </div>
   </div>
 
-  <script src="scripts/main.js"></script>
+  <script type="module" src="scripts/main.js"></script>
 </body>
 
 </html>
